--- a/projects/lib/tsconfig.spec.json
+++ b/projects/lib/tsconfig.spec.json
@@ -18,6 +18,7 @@
   //],
   "include": [
     "**/*.spec.ts",
+    "**/*-spec.ts",
     "**/*.d.ts"
     //TODO: removed this vvv to get back to initial state
     //,
