--- a/projects/showcase/tsconfig.spec.json
+++ b/projects/showcase/tsconfig.spec.json
@@ -4,36 +4,8 @@
         //TODO: removed this vvv to get back to initial state
         //"emitDecoratorMetadata": true,
         "outDir": "../../out-tsc/spec",
-        //TODO: removed this vvv to get back to initial state
-        //"rootDir": "./src",
-        // "types": [
-        //     "jasmine",
-        //     //TODO: removed this vvv added this ^^^ to get back to initial state
-        //     //"jest",
-        //     "node"
-        // ]
-        "types": [
-          "jest",
-          "node"
-        ]
+        "types": ["jest", "node"]
     },
-    // "files": [
-    //   "jest.config.js",
-    //   "src/polyfill.ts"
-    // ],
-    // "files": [
-    //     //TODO: add this (one line) vvvv to get back to initial state
-    //     "src/test.ts",
-    //     "src/polyfills.ts"
-    // ],
-    "files": [
-      "src/polyfills.ts"
-    ],
-    "include": [
-        "src/**/*.spec.ts",
-        "src/**/*.d.ts"
-        //TODO: removed this vvv to get back to initial state
-        //,
-        //"./jest.config.js"
-    ]
+    "files": ["src/polyfills.ts"],
+    "include": ["src/**/*.spec.ts", "src/**/*-spec.ts", "src/**/*.d.ts"]
 }
