--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ngx-utlities-workspace",
+    "name": "ng-eslint",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
@@ -21,66 +21,65 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~8.2.14",
-        "@angular/common": "~8.2.14",
-        "@angular/compiler": "~8.2.14",
-        "@angular/core": "~8.2.14",
-        "@angular/forms": "~8.2.14",
-        "@angular/platform-browser": "~8.2.14",
-        "@angular/platform-browser-dynamic": "~8.2.14",
-        "@angular/router": "~8.2.14",
-        "rxjs": "~6.4.0",
-        "semver": "^7.3.2",
-        "tslib": "^1.10.0",
-        "zone.js": "~0.9.1"
+        "@angular/animations": "~10.1.6",
+        "@angular/common": "~10.1.6",
+        "@angular/compiler": "~10.1.6",
+        "@angular/core": "~10.1.6",
+        "@angular/forms": "~10.1.6",
+        "@angular/platform-browser": "~10.1.6",
+        "@angular/platform-browser-dynamic": "~10.1.6",
+        "@angular/router": "~10.1.6",
+        "rxjs": "~6.6.3",
+        "tslib": "^2.0.3",
+        "zone.js": "~0.10.3"
     },
     "devDependencies": {
-        "@angular-builders/jest": "^9.0.1",
-        "@angular-devkit/build-angular": "^0.803.29",
-        "@angular-devkit/build-ng-packagr": "^0.803.29",
+        "@angular-builders/jest": "^10.0.1",
+        "@angular-devkit/build-angular": "~0.1001.7",
+        "@angular-devkit/build-ng-packagr": "^0.1001.7",
         "@angular-eslint/builder": "0.0.1-alpha.32",
         "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
         "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
         "@angular-eslint/template-parser": "0.0.1-alpha.32",
-        "@angular/cli": "^8.3.29",
-        "@angular/compiler-cli": "~8.2.14",
-        "@angular/language-service": "~8.2.14",
-        "@types/eslint": "^7.2.0",
-        "@types/jasmine": "~3.3.8",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/jest": "^26.0.10",
-        "@types/node": "~8.9.4",
-        "@typescript-eslint/eslint-plugin": "^4.2.0",
-        "@typescript-eslint/parser": "^4.2.0",
+        "@angular/cli": "~10.1.7",
+        "@angular/compiler-cli": "~10.1.6",
+        "@angular/language-service": "~10.1.6",
+        "@types/eslint": "^7.2.4",
+        "@types/jasminewd2": "~2.0.8",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.19.3",
+        "@typescript-eslint/eslint-plugin": "^4.6.1",
+        "@typescript-eslint/parser": "^4.6.1",
         "babel-eslint": "^10.1.0",
         "babel-jest": "^24.9.0",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "babel-preset-env": "^1.7.0",
-        "eslint": "^7.7.0",
-        "eslint-config-prettier": "^6.11.0",
+        "eslint": "^7.13.0",
+        "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-align-assignments": "^1.1.2",
         "eslint-plugin-eslint-comments": "^3.2.0",
-        "eslint-plugin-import": "^2.21.2",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^23.20.0",
         "eslint-plugin-jest-formatting": "^2.0.0",
         "eslint-plugin-jsdoc": "^28.7.0",
+        "eslint-plugin-optimize-regex": "^1.2.0",
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-protractor": "^2.1.1",
         "eslint-plugin-rxjs": "0.0.2-beta.28",
         "eslint-plugin-rxjs-angular": "0.0.1-beta.5",
-        "husky": "^4.2.5",
-        "jasmine-core": "~3.4.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "jest": "^26.4.0",
-        "jest-preset-angular": "^8.2.1",
-        "lint-staged": "^10.2.11",
-        "ng-packagr": "^5.4.0",
-        "prettier": "^2.0.5",
-        "protractor": "~5.4.0",
-        "ts-jest": "^26.2.0",
-        "ts-node": "~7.0.0",
-        "tsickle": "^0.37.0",
-        "typescript": "~3.5.3"
+        "husky": "^4.3.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.2",
+        "jest": "^26.6.3",
+        "jest-preset-angular": "^8.3.2",
+        "lint-staged": "^10.5.1",
+        "ng-packagr": "^10.1.2",
+        "prettier": "^2.1.2",
+        "protractor": "~7.0.0",
+        "ts-jest": "^26.4.4",
+        "ts-node": "~8.3.0",
+        "tsickle": "^0.37.1",
+        "typescript": "~4.0.5"
     }
 }
