--- a/projects/lib/package.json
+++ b/projects/lib/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "lib",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
-  }
+    "name": "lib",
+    "version": "0.0.1",
+    "peerDependencies": {
+        "@angular/common": "^10.1.5",
+        "@angular/core": "^10.1.5"
+    },
+    "dependencies": {
+        "tslib": "^2.0.0"
+    }
 }
