--- a/projects/showcase/e2e/tsconfig.json
+++ b/projects/showcase/e2e/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "../../../out-tsc/e2e",
         "module": "commonjs",
-        "target": "es5",
-        "types": ["jasmine", "jasminewd2", "node"]
+        "target": "es2018",
+        "types": ["jest", "jasminewd2", "node"]
     }
 }
