--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
-        "lint": "eslint . --fix",
+        "prelint-task": "prettier --write .",
+        "lint-report": "eslint .",
+        "lint-task": "eslint . --fix",
+        "lint": "pnpm run prelint-task && pnpm run lint-task",
         "e2e": "ng e2e"
     },
     "husky": {
@@ -21,65 +24,64 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~10.1.6",
-        "@angular/common": "~10.1.6",
-        "@angular/compiler": "~10.1.6",
-        "@angular/core": "~10.1.6",
-        "@angular/forms": "~10.1.6",
-        "@angular/platform-browser": "~10.1.6",
-        "@angular/platform-browser-dynamic": "~10.1.6",
-        "@angular/router": "~10.1.6",
-        "rxjs": "~6.6.3",
-        "tslib": "^2.0.3",
-        "zone.js": "~0.10.3"
+        "@angular/animations": "~13.3.10",
+        "@angular/common": "~13.3.10",
+        "@angular/core": "~13.3.10",
+        "@angular/forms": "~13.3.10",
+        "@angular/platform-browser": "~13.3.10",
+        "@angular/platform-browser-dynamic": "~13.3.10",
+        "@angular/router": "~13.3.10",
+        "rxjs": "~6.6.7",
+        "tslib": "2.4.0",
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-builders/jest": "^10.0.1",
-        "@angular-devkit/build-angular": "~0.1001.7",
-        "@angular-devkit/build-ng-packagr": "^0.1001.7",
-        "@angular-eslint/builder": "0.0.1-alpha.32",
-        "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
-        "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
-        "@angular-eslint/template-parser": "0.0.1-alpha.32",
-        "@angular/cli": "~10.1.7",
-        "@angular/compiler-cli": "~10.1.6",
-        "@angular/language-service": "~10.1.6",
-        "@types/eslint": "^7.2.4",
-        "@types/jasminewd2": "~2.0.8",
-        "@types/jest": "^26.0.15",
-        "@types/node": "^12.19.3",
-        "@typescript-eslint/eslint-plugin": "^4.6.1",
-        "@typescript-eslint/parser": "^4.6.1",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "^24.9.0",
+        "@angular-builders/jest": "^13.0.4",
+        "@angular-devkit/build-angular": "13.3.7",
+        "@angular-eslint/builder": "13.2.1",
+        "@angular-eslint/eslint-plugin": "13.2.1",
+        "@angular-eslint/eslint-plugin-template": "13.2.1",
+        "@angular-eslint/schematics": "13.2.1",
+        "@angular-eslint/template-parser": "13.2.1",
+        "@angular/cli": "13.3.7",
+        "@angular/compiler": "~13.3.10",
+        "@angular/compiler-cli": "~13.3.10",
+        "@angular/language-service": "~13.3.10",
+        "@babel/core": "^7.17.5",
+        "@babel/eslint-parser": "^7.17.0",
+        "@types/eslint": "^8.4.1",
+        "@types/jasminewd2": "~2.0.10",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^12.20.46",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
+        "babel-jest": "^27.5.1",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "babel-preset-env": "^1.7.0",
-        "eslint": "^7.13.0",
-        "eslint-config-prettier": "^6.15.0",
+        "eslint": "^8.10.0",
         "eslint-plugin-align-assignments": "^1.1.2",
         "eslint-plugin-eslint-comments": "^3.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^23.20.0",
-        "eslint-plugin-jest-formatting": "^2.0.0",
-        "eslint-plugin-jsdoc": "^28.7.0",
-        "eslint-plugin-optimize-regex": "^1.2.0",
-        "eslint-plugin-prefer-arrow": "^1.2.2",
-        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jest": "^26.1.1",
+        "eslint-plugin-jest-formatting": "^3.1.0",
+        "eslint-plugin-jsdoc": "^37.9.6",
+        "eslint-plugin-optimize-regex": "^1.2.1",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-protractor": "^2.1.1",
-        "eslint-plugin-rxjs": "0.0.2-beta.28",
-        "eslint-plugin-rxjs-angular": "0.0.1-beta.5",
-        "husky": "^4.3.0",
+        "eslint-plugin-rxjs": "5.0.2",
+        "eslint-plugin-rxjs-angular": "2.0.0",
+        "husky": "^8.0.1",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.2",
-        "jest": "^26.6.3",
-        "jest-preset-angular": "^8.3.2",
-        "lint-staged": "^10.5.1",
-        "ng-packagr": "^10.1.2",
-        "prettier": "^2.1.2",
+        "jest": "28.1.0",
+        "jest-preset-angular": "12.0.1",
+        "lint-staged": "12.4.2",
+        "ng-packagr": "^13.2.1",
+        "prettier": "^2.5.1",
         "protractor": "~7.0.0",
-        "ts-jest": "^26.4.4",
-        "ts-node": "~8.3.0",
-        "tsickle": "^0.37.1",
-        "typescript": "~4.0.5"
+        "ts-jest": "27.1.5",
+        "ts-node": "~10.6.0",
+        "typescript": "4.6.x"
     }
 }
