--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,7 @@
             "request": "launch",
             "name": "debug eslint",
             "program": "${workspaceFolder}\\node_modules\\eslint\\bin\\eslint.js",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "outFiles": ["${workspaceFolder}/**/*.js"]
         }
     ]
 }
