--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   "devDependencies": {
     "@angular-builders/jest": "^14.0.0",
     "@angular-devkit/build-angular": "14.0.4",
-    "@angular-eslint/builder": "13.2.1",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/builder": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
     "@angular-eslint/schematics": "14.0.0",
-    "@angular-eslint/template-parser": "13.2.1",
+    "@angular-eslint/template-parser": "14.0.0",
     "@angular/cli": "14.0.4",
     "@angular/compiler": "~14.0.4",
     "@angular/compiler-cli": "~14.0.4",
@@ -55,7 +55,7 @@
     "@types/node": "^12.20.46",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "28.0.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-env": "^1.7.0",
     "eslint": "^8.10.0",
