address deprecation warnings, finish babel 7 upgrade

--- a/package.json
+++ b/package.json
@@ -32,32 +32,32 @@
     "@angular/platform-browser-dynamic": "~14.0.4",
     "@angular/router": "~14.0.4",
     "rxjs": "~6.6.7",
-    "tslib": "2.4.0",
+    "tslib": "2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/jest": "^14.0.0",
     "@angular-devkit/build-angular": "14.0.4",
-    "@angular-eslint/builder": "14.0.0",
-    "@angular-eslint/eslint-plugin": "14.0.0",
-    "@angular-eslint/eslint-plugin-template": "14.0.0",
-    "@angular-eslint/schematics": "14.0.0",
-    "@angular-eslint/template-parser": "14.0.0",
-    "@angular/cli": "14.0.4",
+    "@angular-eslint/builder": "^14.0.0",
+    "@angular-eslint/eslint-plugin": "^14.0.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-eslint/schematics": "^14.0.0",
+    "@angular-eslint/template-parser": "^14.0.0",
+    "@angular/cli": "~14.0.4",
     "@angular/compiler": "~14.0.4",
-    "@angular/compiler-cli": "~14.0.4",
+    "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "~14.0.4",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-transform-modules-commonjs": "7.18.6",
+    "@babel/preset-env": "7.18.6",
     "@types/eslint": "^8.4.5",
     "@types/jasminewd2": "~2.0.10",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "babel-jest": "28.0.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-preset-env": "^1.7.0",
+    "babel-jest": "28.1.2",
     "eslint": "^8.10.0",
     "eslint-plugin-align-assignments": "^1.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -77,9 +77,8 @@
     "lint-staged": "13.0.3",
     "ng-packagr": "^14.0.2",
     "prettier": "^2.7.1",
-    "protractor": "~7.0.0",
     "ts-jest": "28.0.5",
     "ts-node": "~10.8.1",
-    "typescript": "4.6.x"
+    "typescript": "~4.7.2"
   }
 }
