--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@angular/platform-browser": "~14.0.4",
     "@angular/platform-browser-dynamic": "~14.0.4",
     "@angular/router": "~14.0.4",
-    "rxjs": "~6.6.7",
-    "tslib": "2.3.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.5.5",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
     "@angular-builders/jest": "^14.0.0",
@@ -45,7 +45,7 @@
     "@angular-eslint/template-parser": "^14.0.0",
     "@angular/cli": "~14.0.4",
     "@angular/compiler": "~14.0.4",
-    "@angular/compiler-cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.4",
     "@angular/language-service": "~14.0.4",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
@@ -55,10 +55,10 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "babel-jest": "28.1.2",
-    "eslint": "^8.10.0",
+    "eslint": "^8.19.0",
     "eslint-plugin-align-assignments": "^1.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.26.0",
@@ -78,7 +78,7 @@
     "ng-packagr": "^14.0.2",
     "prettier": "^2.7.1",
     "ts-jest": "28.0.5",
-    "ts-node": "~10.8.1",
-    "typescript": "~4.7.2"
+    "ts-node": "~10.8.2",
+    "typescript": "~4.7.4"
   }
 }
