--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "@angular/language-service": "~14.0.4",
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
-    "@babel/plugin-transform-modules-commonjs": "7.18.6",
-    "@babel/preset-env": "7.18.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/eslint": "^8.4.5",
     "@types/jasminewd2": "~2.0.10",
     "@types/jest": "^28.1.4",
