fix tsconfigs and jest configs post-ng14 upgrade

--- a/projects/lib/tsconfig.lib.json
+++ b/projects/lib/tsconfig.lib.json
@@ -4,16 +4,15 @@
         "outDir": "../../out-tsc/lib",
         "target": "es2015",
         "declaration": true,
+        "declarationMap": true,
         "inlineSources": true,
         "types": [],
-        "lib": ["dom", "es2018"]
+        "lib": ["dom", "es2020"]
     },
     "angularCompilerOptions": {
         "annotateForClosureCompiler": true,
         "skipTemplateCodegen": true,
         "strictMetadataEmit": true,
-        "fullTemplateTypeCheck": true,
-        "strictInjectionParameters": true,
         "enableResourceInlining": true
     },
     "include": ["./src/**/*.ts"],
