--- a/projects/lib/tsconfig.spec.json
+++ b/projects/lib/tsconfig.spec.json
@@ -1,27 +1,18 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        //TODO: removed this vvv to get back to initial state
-        //"emitDecoratorMetadata": true,
         "outDir": "../../out-tsc/spec",
         "rootDir": "./src",
         "types": [
-            //"jasmine",
-            //TODO: removed this vvv added this ^^^ to get back to initial state
             "jest",
             "node"
-        ]
+        ],
+        "esModuleInterop": true,
+        "allowJs": true
     },
-    //TODO: added this vvv to get back to initial state
-    //"files": [
-    //"src/test.ts"
-    //],
     "include": [
         "**/*.spec.ts",
         "**/*-spec.ts",
         "**/*.d.ts"
-        //TODO: removed this vvv to get back to initial state
-        //,
-        //"./jest.config.js"
     ]
 }
