--- a/projects/showcase/tsconfig.app.json
+++ b/projects/showcase/tsconfig.app.json
@@ -1,20 +1,22 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "outDir": "../../out-tsc/app",
-        "declaration": true,
-        "inlineSources": true,
-        "types": [],
-        "lib": ["dom", "es2018"]
-    },
-    "include": ["src/**/*.ts"],
-    "exclude": ["src/**/*.spec.ts", "src/**/*-spec.ts"],
-    "angularCompilerOptions": {
-        "annotateForClosureCompiler": true,
-        "skipTemplateCodegen": true,
-        "strictMetadataEmit": true,
-        "fullTemplateTypeCheck": true,
-        "strictInjectionParameters": true,
-        "enableResourceInlining": true
-    }
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./out-tsc/showcase",
+    "declaration": true,
+    "inlineSources": true,
+    "types": [],
+    "lib": ["dom", "es2018"]
+  },
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ],
+  "exclude": ["src/**/*.spec.ts"],
+  "angularCompilerOptions": {
+  	"annotateForClosureCompiler": true
+  }
 }
