--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,16 @@
     "compilerOptions": {
         "baseUrl": "./",
         "outDir": "./dist/out-tsc",
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "noImplicitOverride": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
         "sourceMap": true,
         "declaration": false,
         "downlevelIteration": true,
-        //TODO: removed this vvv to get back to initial state
-        //"esModuleInterop": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "strictNullChecks": true,
         "moduleResolution": "node",
@@ -15,23 +20,15 @@
         "target": "es2015",
         "module": "es2020",
         "typeRoots": ["node_modules/@types"],
-        "lib": ["es2018", "dom"],
+        "lib": ["es2020", "dom"],
         "paths": {
             "lib": ["dist/lib/lib", "dist/lib"]
         }
     },
-    //   "exclude": [
-    //     "**/build/**",
-    //     "**/coverage/**",
-    //     "**/dist/**",
-    //     "**/node_modules/**"
-    //   ],
-    //   "files": [
-    //     "./.eslintrc.js"
-    //   ],
-    //TODO: removed this ^^^ and added this vvvv to get back to the initial state
     "angularCompilerOptions": {
-        "fullTemplateTypeCheck": true,
-        "strictInjectionParameters": true
+        "enablelI18nLegacyMessageIdFormat": false,
+        "strictInjectionParameters": true,
+        "strictInputAccessModifiers": true,
+        "strictTemplates": true
     }
 }
