--- a/package.json
+++ b/package.json
@@ -24,62 +24,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.0.4",
-    "@angular/common": "~14.0.4",
-    "@angular/core": "~14.0.4",
-    "@angular/forms": "~14.0.4",
-    "@angular/platform-browser": "~14.0.4",
-    "@angular/platform-browser-dynamic": "~14.0.4",
-    "@angular/router": "~14.0.4",
-    "rxjs": "~7.5.5",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.6"
+    "@angular/animations": "~15.0.2",
+    "@angular/common": "~15.0.2",
+    "@angular/core": "~15.0.2",
+    "@angular/forms": "~15.0.2",
+    "@angular/platform-browser": "~15.0.2",
+    "@angular/platform-browser-dynamic": "~15.0.2",
+    "@angular/router": "~15.0.2",
+    "rxjs": "~7.5.7",
+    "tslib": "^2.4.1",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^14.0.0",
-    "@angular-devkit/build-angular": "14.0.4",
-    "@angular-eslint/builder": "^14.0.0",
-    "@angular-eslint/eslint-plugin": "^14.0.0",
-    "@angular-eslint/eslint-plugin-template": "^14.0.0",
-    "@angular-eslint/schematics": "^14.0.0",
-    "@angular-eslint/template-parser": "^14.0.0",
-    "@angular/cli": "~14.0.4",
-    "@angular/compiler": "~14.0.4",
-    "@angular/compiler-cli": "^14.0.4",
-    "@angular/language-service": "~14.0.4",
-    "@babel/core": "^7.18.6",
-    "@babel/eslint-parser": "^7.18.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@angular-builders/jest": "15.0.0-beta.1",
+    "@angular-devkit/build-angular": "15.0.2",
+    "@angular-eslint/builder": "^15.1.0",
+    "@angular-eslint/eslint-plugin": "^15.1.0",
+    "@angular-eslint/eslint-plugin-template": "^15.1.0",
+    "@angular-eslint/schematics": "^15.1.0",
+    "@angular-eslint/template-parser": "^15.1.0",
+    "@angular/cli": "~15.0.2",
+    "@angular/compiler": "~15.0.2",
+    "@angular/compiler-cli": "^15.0.2",
+    "@angular/language-service": "~15.0.2",
+    "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/eslint": "^8.4.5",
+    "@types/eslint": "^8.4.10",
     "@types/jasminewd2": "~2.0.10",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "babel-jest": "28.1.2",
-    "eslint": "^8.19.0",
+    "eslint": "^8.29.0",
     "eslint-plugin-align-assignments": "^1.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-optimize-regex": "^1.2.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-protractor": "^2.1.1",
     "eslint-plugin-rxjs": "5.0.2",
     "eslint-plugin-rxjs-angular": "2.0.0",
-    "husky": "^8.0.1",
-    "jest": "28.1.2",
-    "jest-preset-angular": "12.1.0",
-    "lint-staged": "13.0.3",
-    "ng-packagr": "^14.0.2",
-    "prettier": "^2.7.1",
-    "ts-jest": "28.0.5",
-    "ts-node": "~10.8.2",
-    "typescript": "~4.7.4"
+    "husky": "^8.0.2",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "12.2.3",
+    "lint-staged": "^13.0.4",
+    "ng-packagr": "^15.0.1",
+    "prettier": "^2.8.0",
+    "ts-jest": "^28.0.8",
+    "ts-node": "~10.9.1",
+    "typescript": "~4.8.4"
   }
 }
