--- a/projects/lib/tsconfig.lib.json
+++ b/projects/lib/tsconfig.lib.json
@@ -9,12 +9,12 @@
         "types": [],
         "lib": ["dom", "es2020"]
     },
+    "include": ["./src/**/*.ts"],
+    "exclude": ["**/*.spec.ts", "**/*-spec.ts"],
     "angularCompilerOptions": {
         "annotateForClosureCompiler": true,
         "skipTemplateCodegen": true,
         "strictMetadataEmit": true,
         "enableResourceInlining": true
-    },
-    "include": ["./src/**/*.ts"],
-    "exclude": ["**/*.spec.ts", "**/*-spec.ts"]
+    }
 }
